feat: 발화 음량 기능 제거
